ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: kp-example.com
      http:
        paths:
          - path: /first-composer/
            pathType: Prefix
            backend:
              service:
                name: kp-first-composer-k8s
                port:
                  number: 8082
          - path: /second-composer/
            pathType: Prefix
            backend:
              service:
                name: kp-second-composer-k8s
                port:
                  number: 8084
